feat: front-end card

--- a/src/content/pages/index.mdx
+++ b/src/content/pages/index.mdx
@@ -1,10 +1,12 @@
 ---
 title: index
 ---
+
 import ProfileCard from "@/components/ProfileCard.astro";
+import TechStack from "@/components/TechStack.astro";
 
 <ProfileCard />
 
-## About
+## Tech Stack
 
-I'm a developer and content creator currently studying at the University of Florida.
+<TechStack />
