--- a/src/content/pages/index.mdx
+++ b/src/content/pages/index.mdx
@@ -4,9 +4,14 @@ title: index
 
 import ProfileCard from "@/components/ProfileCard.astro";
 import TechStack from "@/components/TechStack.astro";
+import RecentBlogs from "@/components/RecentBlogs.astro";
 
 <ProfileCard />
 
 ## Tech Stack
 
 <TechStack />
+
+## Recent Posts
+
+<RecentBlogs />
